[package]
name = "github_user_follow"
version = "0.1.0"
authors = ["ttzztztz <ttzztztz@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
futures = "0.3"
termion = "*"
base64 = "0.12.3"
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }